# ComfyUI_FaceSimilarity

./: README.MD  __init__.py  pyproject.toml  requirements.txt
py/: face_similarity.py
