[project]
name = "comfyui_facesimilarity"
description = "A custom node for ComfyUI. It compare two images to rate facial similarity."
version = "1.0.0"
license = "LICENSE"
dependencies = ["torch", "numpy", "opencv-contrib-python", "face-recognition"]

[project.urls]
Repository = "https://github.com/chflame163/ComfyUI_FaceSimilarity"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "chflame163"
DisplayName = "ComfyUI_FaceSimilarity"
Icon = ""
